--- a/WebContent/assets/html/login.html
+++ b/WebContent/assets/html/login.html
@@ -110,9 +110,9 @@
               <button type="submit">login</button>
               <p class="message">
                 <ul id="ullog">
-                  <li id="lilogb"><a href="">회원가입</a></li>
+                  <li id="lilogb"><a href="#">회원가입</a></li>
                   |
-                  <li id="lilog"><a href="">아이디/</a> <a href="">비밀번호 찾기</a></li>
+                  <li id="lilog"><a href="#">아이디/</a> <a href="#">비밀번호 찾기</a></li>
                 </ul>
               </p>
             </form:form>
