--- a/WebContent/assets/html/theme.html
+++ b/WebContent/assets/html/theme.html
@@ -120,46 +120,81 @@
     <div class="img">
     <div class="creations-img">
       <img src="../img/IMG_0398.png" class="img-1">
-      <div class="creations-sub">
+      <div class="sub-title">
+        <a href="#">징검다리를 하나, 둘</a>
+      </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
       <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
+      <img src="../img/pngegg.png" class="comment">
       </div>
     </div>
     </div>
     <div class="img">
     <div class="creations-img">
       <img src="../img/IMG_0555.jpg" class="img-2">
-      <div class="creations-sub">
+      <div class="sub-title">
+        <a href="#">징검다리를 하나, 둘</a>
+      </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
       <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
-    </div>
+      <img src="../img/pngegg.png" class="comment">
+      </div>
     </div>
     </div>
     <div class="img">
     <div class="creations-img">
       <img src="../img/IMG_8895.png" class="img-2">
-      <div class="creations-sub">
+      <div class="sub-title">
+        <a href="#">징검다리를 하나, 둘</a>
+      </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
       <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
-    </div>
+      <img src="../img/pngegg.png" class="comment">
+      </div>
     </div>
     </div>
     <div class="img">
     <div class="creations-img">
       <img src="../img/IMG_9575.jpg" class="img-2">
-      <div class="creations-sub">
+      <div class="sub-title">
+        <a href="#">징검다리를 하나, 둘</a>
+      </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
       <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
-    </div>
+      <img src="../img/pngegg.png" class="comment">
+      </div>
     </div>
     </div>
     <div class="img">
     <div class="creations-img">
       <img src="../img/IMG_9639.jpg" class="img-2">
-      <div class="creations-sub">
+      <div class="sub-title">
+        <a href="#">징검다리를 하나, 둘</a>
+      </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
       <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
-    </div>
+      <img src="../img/pngegg.png" class="comment">
+      </div>
     </div>
     </div>
   </section>
