--- a/WebContent/assets/html/tracing.html
+++ b/WebContent/assets/html/tracing.html
@@ -121,45 +121,80 @@
     <div class="img">
     <div class="creations-img">
       <img src="../img/6bbe39de-072f-49c9-b8c8-83f7b8214f3d.jpg" class="img-1">
-      <div class="creations-sub">
-      <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
+      <div class="sub-title">
+        <a href="#">에덴 동산을 향하여</a>
       </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
+      <img src="../img/free-icon-hearts-138533.png" class="likes">
+      <img src="../img/pngegg.png" class="comment">
+    </div>
     </div>
     </div>
     <div class="img">
     <div class="creations-img">
       <img src="../img/다운로드.jpg" class="img-2">
-      <div class="creations-sub">
+      <div class="sub-title">
+        <a href="#">에덴 동산을 향하여</a>
+      </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
       <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
+      <img src="../img/pngegg.png" class="comment">
     </div>
     </div>
     </div>
     <div class="img">
     <div class="creations-img">
       <img src="../img/다운로드 (1).jpg" class="img-2">
-      <div class="creations-sub">
+      <div class="sub-title">
+        <a href="#">에덴 동산을 향하여</a>
+      </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
       <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
+      <img src="../img/pngegg.png" class="comment">
     </div>
     </div>
     </div>
     <div class="img">
     <div class="creations-img">
       <img src="../img/다운로드 (2).jpg" class="img-2">
-      <div class="creations-sub">
+      <div class="sub-title">
+        <a href="#">에덴 동산을 향하여</a>
+      </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
       <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
+      <img src="../img/pngegg.png" class="comment">
     </div>
     </div>
     </div>
     <div class="img">
     <div class="creations-img">
       <img src="../img/울어__.jpg" class="img-2">
-      <div class="creations-sub">
+      <div class="sub-title">
+        <a href="#">에덴 동산을 향하여</a>
+      </div>
+      <div class="sub-author">
+        <img src="../img/—Pngtree—vector business men icon_4186858.png">
+        <a href="#">작가 이름</a>
+      </div>
+      <div class="creaions-sub">
       <img src="../img/free-icon-hearts-138533.png" class="likes">
-      <img src="../img/comments_icon_125320.png" class="comment">
+      <img src="../img/pngegg.png" class="comment">
     </div>
     </div>
     </div>
